--- a/package.json
+++ b/package.json
@@ -1,36 +1,44 @@
 {
-  "name": "car-rental-backend",
-  "version": "1.0.0",
-  "main": "dist/src/server.js",
-  "license": "MIT",
-  "scripts": {
-    "build": "tsc",
-    "start:dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "start:prod": "node dist/src/server.js",
-    "lint:check": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "prettier:fix": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
-    "prettier:check": "prettier . --check"
-  },
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "http-status-codes": "^2.3.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.1",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cookie-parser": "^1.4.7",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.14.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
-  }
+    "name": "car-rental-backend",
+    "version": "1.0.0",
+    "main": "dist/src/server.js",
+    "license": "MIT",
+    "scripts": {
+        "build": "tsc",
+        "start:dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+        "start:prod": "node dist/src/server.js",
+        "lint:check": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "prettier:fix": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
+        "prettier:check": "prettier . --check"
+    },
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "http-status-codes": "^2.3.0",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.4.1",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.5.0",
+        "@types/bcrypt": "^5.0.2",
+        "@types/cookie-parser": "^1.4.7",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.6",
+        "@types/node": "^20.14.2",
+        "@typescript-eslint/eslint-plugin": "^7.13.0",
+        "@typescript-eslint/parser": "^7.13.0",
+        "eslint": "9.x",
+        "eslint-config-prettier": "^9.1.0",
+        "globals": "^15.4.0",
+        "prettier": "^3.3.2",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.4.5",
+        "typescript-eslint": "^7.13.0"
+    }
 }
